--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,16 @@
 			<artifactId>guice</artifactId>
 			<version>3.0</version>
 		</dependency>
-
-
+<dependency>
+	<groupId>com.google.code.gson</groupId>
+	<artifactId>gson</artifactId>
+	<version>2.5</version>
+</dependency>
+<dependency>
+	<groupId>org.mongodb</groupId>
+	<artifactId>bson</artifactId>
+	<version>3.2.0</version>
+</dependency>
 </dependencies>
   <build>
   <plugins>
